# truffle-python-api

./: Makefile  README.md  pyproject.toml
truffle/: __main__.py  __version__.py  cli.py  main_view.py  network_manager.py  onboarding.py  truffle_client.py
truffle/protos/: app_pb2.py  client_pb2.py  content_pb2.py  firmware_pb2.py
