[tool.poetry]
name = "truffle"
version = "0.0.1"
description = ""
authors = ["Jacob Valdez <jacob@deepshard.org>"]
readme = "README.md"
packages = [{ include = "truffle_cli", from = "." }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
typer = "^0.13.0"
pydantic = "^2.9.2"
httpx = "^0.27.2"
websockets = "^14.0"
grpcio = "^1.62.1"
grpcio-tools = "^1.62.1"
tomli = "^2.1.0"
protobuf = "^5.28.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
autoflake = "^2.3.1"
black = "^24.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
ignore-init-module-imports = true

[tool.poetry.scripts]
truffle = "truffle_cli.__main__:app"
